Changelog
=========

2020.3.0rc5 (unreleased)
------------------------

- Bump ftw.mail to 2.6.2 to get improved email header decoding. [mbaechtold]
- Fix p7m attachment extraction from mails. [deiferni]
- Fix bug with setting issuer and informed_principals on forwardings. [njohner]
- Allow notifying users and groups when creating a new task. [njohner]
- Bump ftw.casauth to 1.3.0 to handle login similar to PlonePAS in @caslogin endpoint. [tinagerber]
- Enable API endpoint `@document-from-template` for tasks. [mbaechtold]
- Support combined notation for task responsible in workflow transitions. [elioschmutz]


2020.3.0rc4 (2020-06-05)
------------------------

- Move the ogds groups import logger more up in the script to make debugging easier. [elioschmutz]
- Add `bumblebee_app_id` to the `@config` API endpoint. [mbaechtold]
- @teams: Order team members by last name. [lgraf]
- @ogds-groups: Order group members by last name. [lgraf]
- Bump ftw.solr to 2.8.6 to get logging improvements and filter helpers. [lgraf]
- Support placeholders in the target url of the webactions. [mbaechtold]
- Fix the upgradestep to merge notification settings from release 2020.3.0rc2 to use it's own configruation copy to not depend on future adjustments. [elioschmutz]
- Add @extract-attachments endpoint to extract mail attachments. [njohner]
- Only allow to extract each mail attachment once. [njohner]
- Do not allow deleting mail attachments anymore. [njohner]
- Rename @team API endpoint to @teams. [tinagerber]
- Avoid object lookup in DocumentLinkWidget for Solr documents and catalog brains. [buchi]
- Improve contenttree widget in handling a large amount of items. [buchi]
- Rename @ogds-user API endpoint to @ogds-users. [tinagerber]
- Update ftw.testing to version 1.20.2. This improves the performance of the testserver significantly. [buchi]
- Rename `users` attribute of @teams endpoint to `items`. [tinagerber]
- Add batching for ogds team and group serializer. [tinagerber]